--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -87,7 +87,7 @@
     color: var(--btn-color);
   }
   
-  .btn {
+  .form-inline .btn {
     background-color: var(--btn-color);
     color: var(--btn-text);
     font-size: 12px;
