Done the Contact Sales Page and Login Page

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,22 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,600;1,700&family=Lato:ital@1&family=Pacifico&family=Roboto+Condensed&family=Ubuntu:ital,wght@1,700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 // Declaring of colors used
 :root {
     --text-color: #454545;
     --btn-color:  #462686;
     --btn-color-hover:  #835ece;
     --btn-text: #ffffff;
-    --font-family: 'Roboto Condensed', sans-serif;
+    --font-family: 'Open Sans', sans-serif;
 }
 
   /* NAVBAR STYLING */
+  header {
+    max-height: 72px;
+    margin-bottom: 0;
+  }
+
   .navbar .container {
       margin: auto;
       max-width: 95%;
   }
 
   .navbar-brand img {
-    max-width: 140px;
+    max-width: 160px;
     max-height: 80px;
     margin-right: 50px;
   }
@@ -27,7 +32,7 @@
   }
   
   .nav-item a {
-    font-size: 16px;
+    font-size: 14px;
     color: var(--text-color);
     font-family: var(--font-family);
   }
@@ -39,10 +44,11 @@
   // Dropdown Menu Styling
   .dropdown-menu {
     border: none;
+    padding-top: 20px;
   }
 
   #drop-display {
-    margin: auto;
+    margin: 0 auto;
     max-width: 90%;
     display: flex;
     flex-basis: 35%;
@@ -67,17 +73,17 @@
   }
 
   .drop-desc h3 {
-    font-size: 18px;
+    font-size: 15px;
     font-weight: bold;
   }
 
   .drop-desc p {
-    font-size: 15px;
+    font-size: 13px;
   }
   
   .login {
     text-decoration: none;
-    font-size: 16px;
+    font-size: 14px;
     color: var(--text-color);
     font-family: var(--font-family);
   }
@@ -100,4 +106,96 @@
   .btn:hover {
     background-color: var(--btn-color-hover);
     color: var(--btn-text);
+  }
+
+  // FOOTER STYLING
+  footer {
+    display: grid;
+    grid-template-columns: 2fr 4fr;
+    padding: 20px 15px;
+  }
+
+  .section-a {
+    margin: 15px 45px;
+  }
+
+  .section-a img {
+    max-width: 160px;
+    max-height: 80px;
+  }
+
+  .section-a #p1 {
+    font-family: var(--font-family);
+    padding-top: 15px;
+    color: #454545;
+    font-size: 18px;
+  }
+
+  .section-a #p2 {
+    font-family: var(--font-family);
+    font-size: 12px;
+    padding-top: 5px;
+    color: #01001D;
+  }
+
+  .section-a-social {
+    font-family: var(--font-family);
+    margin: 20px 0;
+    padding-top: 30px;
+  }
+
+  .section-a-social #p3 {
+    font-size: 12px;
+  }
+
+  .section-a-social #p4 {
+    font-size: 20px;
+  }
+
+  .section-a-social .social-links i {
+    font-size: 18px;
+    padding: 0 4px;
+  }
+
+  .section-b select {
+    width: 30%;
+    margin-left: auto;
+    margin-right: 10px;
+    border: 1px solid var(--btn-color);
+    font-family: var(--font-family);
+    font-size: 14px;
+    font-weight: bold;
+    color: var(--btn-color);
+    border-radius: 5px;
+  }
+
+  .section-b .footer-list-grid {
+    display: grid;
+    grid-template-columns: 2fr 2fr 3fr 2fr;
+    margin-top: 60px;
+  }
+
+  .footer-list h3 {
+    font-family: var(--font-family);
+    font-size: 15px;
+    font-weight: bold;
+  }
+
+  .footer-list ul li {
+    list-style: none;
+    font-family: var(--font-family);
+    font-size: 13px;
+    padding: 5px 2px;
+  }
+
+  .copyright-section hr {
+    width: 100%;
+  }
+
+  .copyright-section p{
+    font-family: var(--font-family);
+    font-size: 12px;
+    color: #01001D 60%;
+    padding-top: 5px;
+    padding-left: 5px;
   }
