--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,20 +1,26 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,600;1,700&family=Lato:ital@1&family=Pacifico&family=Roboto+Condensed&family=Ubuntu:ital,wght@1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
 :root {
   --text-color: #454545;
   --btn-color:  #462686;
   --btn-color-hover:  #835ece;
   --btn-text: #ffffff;
-  --font-family: 'Roboto Condensed', sans-serif;
+  --font-family: 'Open Sans', sans-serif;
 }
 
 /* NAVBAR STYLING */
+header {
+  max-height: 72px;
+  margin-bottom: 0;
+}
+
 .navbar .container {
   margin: auto;
   max-width: 95%;
 }
 
 .navbar-brand img {
-  max-width: 140px;
+  max-width: 160px;
   max-height: 80px;
   margin-right: 50px;
 }
@@ -25,7 +31,7 @@
 }
 
 .nav-item a {
-  font-size: 16px;
+  font-size: 14px;
   color: var(--text-color);
   font-family: var(--font-family);
 }
@@ -36,10 +42,11 @@
 
 .dropdown-menu {
   border: none;
+  padding-top: 20px;
 }
 
 #drop-display {
-  margin: auto;
+  margin: 0 auto;
   max-width: 90%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -72,17 +79,17 @@
 }
 
 .drop-desc h3 {
-  font-size: 18px;
+  font-size: 15px;
   font-weight: bold;
 }
 
 .drop-desc p {
-  font-size: 15px;
+  font-size: 13px;
 }
 
 .login {
   text-decoration: none;
-  font-size: 16px;
+  font-size: 14px;
   color: var(--text-color);
   font-family: var(--font-family);
 }
@@ -108,6 +115,101 @@
   color: var(--btn-text);
 }
 
+footer {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 2fr 4fr;
+      grid-template-columns: 2fr 4fr;
+  padding: 20px 15px;
+}
+
+.section-a {
+  margin: 15px 45px;
+}
+
+.section-a img {
+  max-width: 160px;
+  max-height: 80px;
+}
+
+.section-a #p1 {
+  font-family: var(--font-family);
+  padding-top: 15px;
+  color: #454545;
+  font-size: 18px;
+}
+
+.section-a #p2 {
+  font-family: var(--font-family);
+  font-size: 12px;
+  padding-top: 5px;
+  color: #01001D;
+}
+
+.section-a-social {
+  font-family: var(--font-family);
+  margin: 20px 0;
+  padding-top: 30px;
+}
+
+.section-a-social #p3 {
+  font-size: 12px;
+}
+
+.section-a-social #p4 {
+  font-size: 20px;
+}
+
+.section-a-social .social-links i {
+  font-size: 18px;
+  padding: 0 4px;
+}
+
+.section-b select {
+  width: 30%;
+  margin-left: auto;
+  margin-right: 10px;
+  border: 1px solid var(--btn-color);
+  font-family: var(--font-family);
+  font-size: 14px;
+  font-weight: bold;
+  color: var(--btn-color);
+  border-radius: 5px;
+}
+
+.section-b .footer-list-grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 2fr 2fr 3fr 2fr;
+      grid-template-columns: 2fr 2fr 3fr 2fr;
+  margin-top: 60px;
+}
+
+.footer-list h3 {
+  font-family: var(--font-family);
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.footer-list ul li {
+  list-style: none;
+  font-family: var(--font-family);
+  font-size: 13px;
+  padding: 5px 2px;
+}
+
+.copyright-section hr {
+  width: 100%;
+}
+
+.copyright-section p {
+  font-family: var(--font-family);
+  font-size: 12px;
+  color: #01001D 60%;
+  padding-top: 5px;
+  padding-left: 5px;
+}
+
 #main {
   display: -ms-grid;
   display: grid;
@@ -119,10 +221,15 @@
 
 .section-1 {
   margin: 120px 45px;
-  padding: 50px;
+  padding: 50px 50px 0px 50px;
   background-color: #fff;
   -webkit-box-shadow: 0px 0px 30px 10px rgba(0, 0, 0, 0.08);
           box-shadow: 0px 0px 30px 10px rgba(0, 0, 0, 0.08);
+  max-height: 75%;
+}
+
+.section-1 form {
+  padding-bottom: 0;
 }
 
 form label {
@@ -134,7 +241,7 @@ form label {
 .section-1 textarea {
   border: 1px solid rgba(21, 11, 40, 0.7);
   border-radius: 5px;
-  font-size: 15px;
+  font-size: 13px;
   color: #ccc;
 }
 
@@ -148,7 +255,7 @@ form label {
 }
 
 .section-2 {
-  margin: 130px 20px;
+  margin: 75px 20px;
   padding: 30px;
   line-height: 1.4;
 }
@@ -156,7 +263,7 @@ form label {
 .title h4 {
   font-family: var(--font-family);
   color: #333333;
-  font-size: 30px;
+  font-size: 25px;
   line-height: 48px;
   margin: 40px 0;
 }
@@ -169,7 +276,7 @@ form label {
 .body h4 {
   font-family: var(--font-family);
   color: #333333;
-  font-size: 30px;
+  font-size: 25px;
   padding: 30px 0;
 }
 
@@ -187,8 +294,80 @@ form label {
 }
 
 .body-grid .box h3 {
-  font-size: 20px;
+  font-size: 13px;
   font-weight: bold;
+}
+
+.login-container {
+  margin: 90px;
+}
+
+.login-container .login-header {
+  text-align: center;
+}
+
+.login-header h2 {
+  font-family: 'Roboto-Condensed', sans-serif;
+  color: #333333;
+  font-size: 27px;
+}
+
+.login-header p {
+  font-size: 12px;
+}
+
+.login-container form {
+  margin: auto;
+  padding: 10px;
+  max-width: 50%;
+}
+
+.login-container form label {
+  font-size: 12px;
+}
+
+.login-container form input {
+  border: 1px solid rgba(21, 11, 40, 0.7);
+  border-radius: 5px;
+}
+
+.login-container form button {
+  width: 100%;
+  text-align: center;
+  background-color: var(--btn-color);
+  border-radius: 50px;
+  color: var(--btn-text);
+  font-family: var(--font-family);
+}
+
+form .forgot-password {
+  text-align: center;
+  padding-top: 8px;
+}
+
+.forgot-password a {
+  color: var(--btn-color);
+  font-size: 13px;
+}
+
+form .social-login {
+  font-family: var(--font-family);
+  padding-top: 17px;
+  font-size: 13px;
+  font-weight: bold;
+}
+
+.social-login i {
+  font-size: 17px;
+  padding: 3px;
+}
+
+.copyright p {
+  font-family: var(--font-family);
+  text-align: center;
+  padding-top: 70px;
+  font-size: 12px;
+  color: #01001D 60%;
 }
 
 /* GLOBAL STYLING FOR ALL PAGES*/
@@ -203,5 +382,15 @@ body {
   font-family: 'Lato', sans-serif;
   overflow-x: hidden;
   background-color: #ffffff;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+a:hover {
+  text-decoration: none;
+  color: black;
 }
 /*# sourceMappingURL=style.css.map */
