--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,3 +15,15 @@
     overflow-x: hidden;
     background-color: #ffffff;
   }
+
+  a {
+    text-decoration: none;
+    color: black;
+  }
+
+  a:hover {
+    text-decoration: none;
+    color: black;
+  }
+
+  // LANDING PAGE STYLING
