--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,7 +2,7 @@
 @import './contactsales';
 @import './enterprise';
 @import './login';
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 /* GLOBAL STYLING FOR ALL PAGES*/
 * {
     box-sizing: border-box;
@@ -11,8 +11,8 @@
   body {
     margin: 0;
     padding: 0;
-    font-family: 'Lato', sans-serif;
     overflow-x: hidden;
+    font-family: var(--font-family);
     background-color: #ffffff;
   }
 
@@ -27,3 +27,245 @@
   }
 
   // LANDING PAGE STYLING
+  // SECTION-1 STYLING
+  #first-section {
+    margin: 60px 30px;
+  }
+
+  #first-section .first-section-grid {
+    display: grid;
+    grid-template-columns: 4fr 2fr;
+  }
+
+  .first-section-a {
+    padding: 30px 5px;
+  }
+
+  .first-section-a h2 {
+    font-family: 'Montserrat', sans-serif;
+    color: var(--btn-color);
+    font-weight: bold;
+  }
+
+  .first-section-a p {
+    margin-top: 35px;
+    font-family: 'Montserrat', sans-serif;
+    color: #5f5d5d;
+    font-weight: lighter;
+  }
+
+  .first-section-a a {
+    margin-top: 15px;
+    background-color: var(--btn-color);
+    color: var(--btn-text);
+    font-size: 12px;
+    font-family: var(--font-family);
+    padding: 14px 20px;
+    transition: all 300ms ease-in;
+    width: 170px;
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.15);
+    border-radius: 100px;
+  }
+
+  .first-section-b img {
+    max-width: 550px;
+    max-height: 550px;
+  }
+
+  // SECTION-2 STYLING
+  #second-section h2 {
+    font-family: var(--font-family);
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    padding-top: 5px;
+  }
+
+  .second-section-grid {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    margin: 30px 0;
+    padding: 8px 0;
+  }
+
+  .second-section-grid #paystack img {
+    max-width: 170px;
+    max-height: 120px;
+  }
+
+  .second-section-grid #egyptair img {
+    max-width: 230px;
+    max-height: 120px;
+  }
+
+  .second-section-grid .box img {
+    max-width: 100px;
+    max-height: 100px;
+  }
+
+  // SECTION-3 STYLING
+  #third-section ul {
+    margin-top: 100px;
+    border: 1px solid #454545;
+    border-radius: 5px;
+
+    li #isactive {
+      background-color: var(--btn-color);
+      color: var(--btn-text);
+    }
+  }
+
+  #third-section .third-section-grid {
+    display: grid;
+    grid-template-columns: 4fr 2fr;
+    margin-top: 120px;
+  }
+
+  .third-section-a {
+    padding: 30px 5px;
+  }
+
+  .third-section-a h2 {
+    margin-top: 60px;
+    font-family: 'Montserrat', sans-serif;
+    color: #333333;
+    font-weight: bold;
+  }
+
+  .third-section-a p {
+    margin-top: 35px;
+    font-family: 'Montserrat', sans-serif;
+    color: #5f5d5d;
+    font-weight: lighter;
+  }
+
+  .third-section-b img {
+    max-width: 550px;
+    max-height: 550px;
+  }
+
+  #special-section {
+    margin-top: 100px;
+    margin-bottom: 100px;
+
+    h2 {
+      padding-top: 20px;
+      text-align: center;
+      font-family: 'Montserrat', sans-serif;
+      font-size: 25px;
+      font-weight: bold;
+    }
+
+    .box-grid-1 {
+      display: grid;
+      grid-template-columns: repeat(11, 1fr);
+      margin: 60px;
+
+      img {
+        max-width: 50px;
+        max-height: 50px;
+      }
+    }
+
+    .box-grid-2 {
+      display: grid;
+      margin: 60px;
+      grid-template-columns: repeat(11, 1fr);
+
+      img {
+        max-width: 50px;
+        max-height: 50px;
+      }
+    }
+  }
+
+    // SECTION-4 STYLING
+    #fourth-section .fourth-section-grid {
+      display: grid;
+      grid-template-columns: 2fr 4fr;
+      grid-gap: 80px;
+      margin-top: 120px;
+    }
+
+    .fourth-section-a img {
+      max-width: 500px;
+      max-height: 500px;
+    }
+  
+    .fourth-section-b {
+      padding: 30px 5px;
+    }
+  
+    .fourth-section-b h2 {
+      margin-top: 60px;
+      font-family: 'Montserrat', sans-serif;
+      color: #333333;
+      font-weight: bold;
+    }
+  
+    .fourth-section-b p {
+      margin-top: 35px;
+      font-family: 'Montserrat', sans-serif;
+      color: #5f5d5d;
+      font-weight: lighter;
+    }
+  
+    // SECTION-5 STYLING
+  #fifth-section .fifth-section-grid {
+    display: grid;
+    grid-template-columns: 4fr 2fr;
+    margin-top: 120px;
+  }
+
+  .fifth-section-a {
+    padding: 30px 5px;
+  }
+
+  .fifth-section-a h2 {
+    margin-top: 60px;
+    font-family: 'Montserrat', sans-serif;
+    color: #333333;
+    font-weight: bold;
+  }
+
+  .fifth-section-a p {
+    margin-top: 35px;
+    font-family: 'Montserrat', sans-serif;
+    color: #5f5d5d;
+    font-weight: lighter;
+  }
+
+  .fifth-section-b img {
+    max-width: 550px;
+    max-height: 550px;
+  }
+
+  // Section 9 Styling
+  #nineth-section {
+    margin-top: 30px;
+    background-color: #7837F8;
+    text-align: center;
+    padding-top: 90px;
+    min-height: 300px;
+    font-family: 'Montserrat', sans-serif;
+
+    h2 {
+      color: var(--btn-text);
+    }
+
+    p {
+      color: var(--btn-text);
+    }
+
+    a {
+      background-color: var(--btn-color);
+      color: var(--btn-text);
+      font-size: 12px;
+      font-family: var(--font-family);
+      padding: 10px 22px;
+      border-radius: 17px;
+      border: none;
+      transition: all 300ms ease-in;
+    }
+  }
+
