--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -299,6 +299,151 @@ form label {
   font-weight: bold;
 }
 
+#landing-section {
+  margin: 120px;
+  text-align: center;
+}
+
+#landing-section .vector {
+  background: url("../assets/images/Vector 1.svg") no-repeat center center/cover;
+}
+
+#landing-section .grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 96% 4%;
+      grid-template-columns: 96% 4%;
+}
+
+#landing-section h2 {
+  font-family: 'Montserrat', sans-serif;
+  color: var(--btn-color);
+  font-weight: bolder;
+  font-size: 40px;
+  padding: 10px 0;
+}
+
+#landing-section img {
+  max-width: 150px;
+}
+
+#landing-section p {
+  padding: 15px 0;
+}
+
+#landing-section a {
+  background-color: var(--btn-color);
+  color: var(--btn-text);
+  font-size: 12px;
+  font-family: var(--font-family);
+  padding: 12px 22px;
+  border-radius: 17px;
+  border: none;
+}
+
+#landing-section .grid-1 {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 20% 80%;
+      grid-template-columns: 20% 80%;
+  grid-gap: 700px;
+}
+
+#landing-section .grid-1 a {
+  display: none;
+}
+
+#benefit-section {
+  margin-top: 30px;
+  background-color: #7837F8;
+  padding-top: 10px;
+  min-height: 350px;
+  color: var(--btn-text);
+  font-family: 'Montserrat', sans-serif;
+}
+
+#benefit-section h2 {
+  font-size: 20px;
+  text-align: center;
+  padding: 40px;
+}
+
+#benefit-section .benefit-section-grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 6fr 3fr;
+      grid-template-columns: 6fr 3fr;
+}
+
+#benefit-section .benefit-section-grid .benefit-a p {
+  padding-top: 15px;
+}
+
+#benefit-section .benefit-section-grid .benefit-b ul li {
+  list-style-type: none;
+  padding-top: 7px;
+}
+
+#map-section {
+  background-color: rgba(204, 204, 204, 0.1);
+  text-align: center;
+  padding: 50px;
+}
+
+#map-section h2 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
+  font-size: 22px;
+}
+
+#map-section p {
+  padding: 20px;
+}
+
+#map-section img {
+  max-width: 400px;
+  max-height: 500px;
+}
+
+#testimony-section {
+  font-family: 'Montserrat', sans-serif;
+  margin-top: 80px;
+  text-align: center;
+}
+
+#testimony-section p {
+  line-height: 1.5;
+}
+
+#testimony-section img {
+  max-width: 200px;
+  padding-top: 30px;
+  padding-bottom: 40px;
+}
+
+#contact-sales {
+  background-color: rgba(204, 204, 204, 0.1);
+  text-align: center;
+  padding: 120px;
+}
+
+#contact-sales h2 {
+  font-weight: bold;
+  font-family: 'Montserrat', sans-serif;
+}
+
+#contact-sales a {
+  background-color: var(--btn-color);
+  color: var(--btn-text);
+  font-size: 12px;
+  font-family: var(--font-family);
+  padding: 12px 22px;
+  border-radius: 17px;
+  -webkit-transition: all 300ms ease-in;
+  transition: all 300ms ease-in;
+  margin-top: 25px;
+}
+
 .login-container {
   margin: 90px;
 }
