Done all pages but still needs little tweaking

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -21,10 +21,10 @@
     color: black;
   }
 
-  // a:hover {
-  //   text-decoration: none;
-  //   color: black;
-  // }
+  a:hover {
+    text-decoration: none;
+    color: white;
+  }
 
   // LANDING PAGE STYLING
   // SECTION-1 STYLING
