Done all pages but still needs little tweaking

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -583,6 +583,10 @@ a:hover {
   border-radius: 100px;
 }
 
+.first-section-a a:hover {
+  color: white;
+}
+
 .first-section-b img {
   max-width: 550px;
   max-height: 550px;
