--- a/scss/style.scss
+++ b/scss/style.scss
@@ -67,6 +67,10 @@
     border-radius: 100px;
   }
 
+  .first-section-a a:hover {
+    color: white;
+  }
+
   .first-section-b img {
     max-width: 550px;
     max-height: 550px;
