Made Little changes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,6 +199,10 @@ footer {
   padding: 5px 2px;
 }
 
+.footer-list ul li a:hover {
+  color: #333333;
+}
+
 .copyright-section hr {
   width: 100%;
 }
@@ -537,7 +541,6 @@ a {
 
 a:hover {
   text-decoration: none;
-  color: white;
 }
 
 #first-section {
