--- a/scss/style.scss
+++ b/scss/style.scss
@@ -38,34 +38,34 @@
 
   .first-section-a {
     padding: 30px 5px;
-  }
 
-  .first-section-a h2 {
-    font-family: 'Montserrat', sans-serif;
-    color: var(--btn-color);
-    font-weight: bold;
-  }
+    h2 {
+      font-family: 'Montserrat', sans-serif;
+      color: var(--btn-color);
+      font-weight: bold;
+    }
 
-  .first-section-a p {
-    margin-top: 35px;
-    font-family: 'Montserrat', sans-serif;
-    color: #5f5d5d;
-    font-weight: lighter;
-  }
+    p {
+      margin-top: 35px;
+      font-family: 'Montserrat', sans-serif;
+      color: #5f5d5d;
+      font-weight: lighter;
+    }
 
-  .first-section-a a {
-    margin-top: 15px;
-    background-color: var(--btn-color);
-    color: var(--btn-text);
-    font-size: 12px;
-    font-family: var(--font-family);
-    padding: 14px 20px;
-    transition: all 300ms ease-in;
-    width: 170px;
-    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.15);
-    border-radius: 100px;
+    a {
+      margin-top: 15px;
+      background-color: var(--btn-color);
+      color: var(--btn-text);
+      font-size: 12px;
+      font-family: var(--font-family);
+      padding: 14px 20px;
+      transition: all 300ms ease-in;
+      width: 170px;
+      box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.15);
+      border-radius: 100px;
+    }
   }
-
+  
   .first-section-a a:hover {
     color: white;
   }
@@ -89,21 +89,21 @@
     grid-template-columns: repeat(7, 1fr);
     margin: 30px 0;
     padding: 8px 0;
-  }
 
-  .second-section-grid #paystack img {
-    max-width: 170px;
-    max-height: 120px;
-  }
+    #paystack img {
+      max-width: 170px;
+      max-height: 120px;
+    }
 
-  .second-section-grid #egyptair img {
-    max-width: 230px;
-    max-height: 120px;
-  }
+    #egyptair img {
+      max-width: 230px;
+      max-height: 120px;
+    }
 
-  .second-section-grid .box img {
-    max-width: 100px;
-    max-height: 100px;
+    .box img {
+      max-width: 100px;
+      max-height: 100px;
+    }
   }
 
   // SECTION-3 STYLING
@@ -126,20 +126,20 @@
 
   .third-section-a {
     padding: 30px 5px;
-  }
 
-  .third-section-a h2 {
-    margin-top: 60px;
-    font-family: 'Montserrat', sans-serif;
-    color: #333333;
-    font-weight: bold;
-  }
+    h2 {
+      margin-top: 60px;
+      font-family: 'Montserrat', sans-serif;
+      color: #333333;
+      font-weight: bold;
+    }
 
-  .third-section-a p {
-    margin-top: 35px;
-    font-family: 'Montserrat', sans-serif;
-    color: #5f5d5d;
-    font-weight: lighter;
+    p {
+      margin-top: 35px;
+      font-family: 'Montserrat', sans-serif;
+      color: #5f5d5d;
+      font-weight: lighter;
+    }
   }
 
   .third-section-b img {
@@ -197,20 +197,20 @@
   
     .fourth-section-b {
       padding: 30px 5px;
-    }
-  
-    .fourth-section-b h2 {
-      margin-top: 60px;
-      font-family: 'Montserrat', sans-serif;
-      color: #333333;
-      font-weight: bold;
-    }
-  
-    .fourth-section-b p {
-      margin-top: 35px;
-      font-family: 'Montserrat', sans-serif;
-      color: #5f5d5d;
-      font-weight: lighter;
+
+      h2 {
+        margin-top: 60px;
+        font-family: 'Montserrat', sans-serif;
+        color: #333333;
+        font-weight: bold;
+      }
+
+      p {
+        margin-top: 35px;
+        font-family: 'Montserrat', sans-serif;
+        color: #5f5d5d;
+        font-weight: lighter;
+      }
     }
   
     // SECTION-5 STYLING
@@ -222,20 +222,20 @@
 
   .fifth-section-a {
     padding: 30px 5px;
-  }
 
-  .fifth-section-a h2 {
-    margin-top: 60px;
-    font-family: 'Montserrat', sans-serif;
-    color: #333333;
-    font-weight: bold;
-  }
+    h2 {
+      margin-top: 60px;
+      font-family: 'Montserrat', sans-serif;
+      color: #333333;
+      font-weight: bold;
+    }
 
-  .fifth-section-a p {
-    margin-top: 35px;
-    font-family: 'Montserrat', sans-serif;
-    color: #5f5d5d;
-    font-weight: lighter;
+    p {
+      margin-top: 35px;
+      font-family: 'Montserrat', sans-serif;
+      color: #5f5d5d;
+      font-weight: lighter;
+    }
   }
 
   .fifth-section-b img {
